# budget-tracker

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/lib/: auth.js  db.js  format.js  format.test.js  supabaseClient.js
src/lib/components/: Layout.svelte  Login.svelte
src/lib/pages/: Budgets.svelte  Categories.svelte  CreditCards.svelte  Dashboard.svelte  Transactions.svelte
src/lib/stores/: session.js
supabase/migrations/: 0001_init.sql  0002_grants.sql  0003_constraints_and_perf.sql
