[package]
name = "budget-tracker"
version = "0.1.0"
description = "Personal finance budget and credit card payment tracker"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "1", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
