[package]
name = "budget-tracker"
version = "0.1.0"
description = "Personal finance budget and credit card payment tracker"
authors = ["Bojan Peric"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
